[tool.poetry]
name = "wallaby-hires"
version = "0.1.0"
description = ""
authors = ["awicenec", "gayatri"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
black = "^24.4.2"
mypy = "^1.10.0"
astroquery = "0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wallaby_hires = 'wallaby_hires.__main__:main'
